SERVER-102879 Don't capture the lock in the targetOpTimeCB callback. (#34240)

GitOrigin-RevId: 7d4f91895bd57a0cacf30df97cf1d41be0337c95